keycloak/A/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    nuamx.kubed.devops-psql-auth: sync
